target-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: target-pod
  namespace: target-namespace
  labels:
    name: target-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
