app-podinfo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app01
  labels:
    name: app01
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-deployment
  namespace: app01
spec:
  selector:
    matchLabels:
      app: app01-podinfo
  template:
    metadata:
      labels:
        app: app01-podinfo
    spec:
      containers:
      - name: podinfo-container
        image: stefanprodan/podinfo
        ports:
        - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app01
spec:
  ports:
  - port: 9898
  type: NodePort
  selector:
    app: app01-podinfo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: app01
spec:
  rules:
  - host: app01.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 9898
  ingressClassName: nginx
