POLICY-deny-from-specific-ip.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific-ip
  namespace: target-namespace
spec:
  podSelector:
    matchLabels:
      name: target-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.184.72/32
