POLICY-deny-to-specific-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: target-namespace
spec:
  podSelector:
    matchLabels:
      name: target-pod
  policyTypes:
  - Ingress
